Fixed Overlapping navbar/month

--- a/css/standard.css
+++ b/css/standard.css
@@ -38,7 +38,7 @@ a{
   font-family:WalkwayBlack;
   position:fixed;
   z-index: 5;
-  height:5%;
+
 }
 #Nav_bar_left{
   padding-left:1%;
@@ -116,7 +116,6 @@ a{
 }
 .red{
   color:red;
-  padding-right:10px;
   border-color:red
 }
 .green{
